[tool.poetry]
name = "awesome-code"
version = "0.1.0"
description = "A list of leetcode solutions."
authors = [
    "Mahmoud Harmouch <eng.mahmoudharmouch@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Harmouch101/awesome-code"
homepage = ""
documentation = ""
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
keywords = ["python", "leetcode", "leetcode solutions", "awesome", "awesome-code", "solutions"]
packages = [
    { include = "solutions", from = "." },
]
include = [
    "LICENSE",
    "README.rst",
]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.961"
tox = "^3.25.0"
isort = "^5.10.1"
bump2version = "^1.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
